# multitrack-video-editor

./: .gitignore  CMakeLists.txt  README.md  proposed_extensions.csv
include/: Application.h  Image.h  Video.h
include/assets/: Caption.h  CaptionAssetFactory.h  CompositeAssetFactory.h  DefaultAssetFactory.h  IAsset.h  IAssetFactory.h  ImageAsset.h  ImageAssetFactory.h  TextAsset.h  TextAssetFactory.h  TextOverlay.h  VideoAsset.h  VideoAssetFactory.h
include/commands/: ExportAssetCommand.h  ExportImageCommand.h  ICommand.h
include/export/: ExportFacade.h
include/filters/: ChromaFilter.h  GreyscaleFilter.h  IFilter.h  MeanBlurFilter.h  RedFilter.h  SimpleFilter.h  ThresholdFilter.h
include/graphics/: Color.h  ColorRect.h  Glyph.h  Quad.h  ShaderProgram.h  Text.h  Texture.h  Window.h
include/timeline/: Timeline.h  TimelineEntry.h  Track.h
include/ui/: Button.h  ButtonPanel.h  Container.h  Icon.h  IconButton.h  TextButton.h  TrackVisualization.h
include/ui/export/: ExportMenuController.h  ExportMenuModel.h  ExportMenuView.h
lib/: ImageAssetFactory.h  stb_image_write.h  video_reader.cpp  video_reader.hpp  video_writer.cpp  video_writer.hpp
lib/ffmpeg/: CMakeLists.txt
lib/glad/: glad.c
src/: Application.cpp  main.cpp
src/assets/: Caption.cpp  CaptionAssetFactory.cpp  CompositeAssetFactory.cpp  DefaultAssetFactory.cpp  Image.cpp  ImageAsset.cpp  ImageAssetFactory.cpp  TextAsset.cpp  TextAssetFactory.cpp  TextOverlay.cpp  Video.cpp  VideoAsset.cpp  VideoAssetFactory.cpp
src/export/: ExportFacade.cpp
src/graphics/: ColorRect.cpp  Glyph.cpp  Quad.cpp  ShaderProgram.cpp  Text.cpp  Texture.cpp  Window.cpp
src/graphics/shaders/: button.fsh  composite.fsh  track.fsh
src/timeline/: Timeline.cpp  TimelineEntry.cpp  Track.cpp
src/ui/: Button.cpp  ButtonPanel.cpp  Container.cpp  Icon.cpp  IconButton.cpp  TextButton.cpp  TrackVisualization.cpp
src/ui/export/: ExportMenuController.cpp  ExportMenuModel.cpp  ExportMenuView.cpp
tests/: test_caption.cpp  test_caption_factory.cpp  test_factories.cpp  test_filters.cpp  test_image.cpp  test_image_asset.cpp  test_video_asset.cpp
tests/fixtures/: test_caption.txt
